--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "@azure/cosmos": "^3.15.1",
     "@azure/storage-blob": "^12.9.0",
     "formidable": "^2.0.1",
