--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "formidable": "^2.0.1",
     "http-status-enum": "^1.0.2",
@@ -17,7 +18,7 @@
     "react-dom": "^16.12.0",
     "react-drag-drop-files": "^2.3.4",
     "react-pro-sidebar": "^0.7.1",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^5.0.0",
     "sass": "^1.49.9"
   },
   "scripts": {
