--- a/api/package.json
+++ b/api/package.json
@@ -13,13 +13,10 @@
     "axios": "^0.26.1",
     "@azure/cosmos": "^3.15.1",
     "@azure/storage-blob": "^12.9.0",
-    "formidable": "^2.0.1",
     "http-status-enum": "^1.0.2",
     "parse-multipart": "^1.0.4"
   },
   "devDependencies": {
-    "@azure/functions": "^1.2.3",
-    "@types/formidable": "^2.0.4",
-    "typescript": "^4.6.2"
+    "@azure/functions": "^1.2.3"
   }
 }
