--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "parse-multipart": "^1.0.4"
   },
   "devDependencies": {
-    "@azure/functions": "^1.2.3"
+    "@azure/functions": "^1.2.3",
+    "typescript": "^4.0.0"
   }
 }
