--- a/api/package.json
+++ b/api/package.json
@@ -10,14 +10,16 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "axios": "^0.26.1",
     "@azure/cosmos": "^3.15.1",
     "@azure/storage-blob": "^12.9.0",
+    
+    "axios": "^0.26.1",
     "http-status-enum": "^1.0.2",
     "parse-multipart": "^1.0.4"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
-    "typescript": "^4.0.0"
+    "typescript": "^4.6.2",
+    "@types/node": "^17.0.22"
   }
 }
