--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "http-status-enum": "^1.0.2",
+    "lodash": "^4.17.21",
     "parse-multipart": "^1.0.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
